# gazebo_dc_motor

./: CMakeLists.txt  README.md  dc_motor_hw_interface_sim_plugins.xml  gazebo_dc_motor_hw_interface_plugins.xml  package.xml  robot_hw_sim_plugins.xml
include/gazebo_dc_motor/: dc_motor_current_model.h  dc_motor_default_model.h  dc_motor_duty_model.h  dc_motor_hw_interface_sim.h  dc_motor_model.h  dc_motor_model_switcher.h  dc_motor_robot_hw_sim.h  dc_motor_voltage_model.h  default_robot_hw_sim.h  gazebo_dc_motor_plugin.h  low_pass_filter.h  robot_hw_sim.h
include/gazebo_dc_motor_plugin/: gazebo_dc_motor_hw_interface.h  gazebo_dc_motor_plugin.h  robot_hw_sim.h
sample/config/: effort_controller_servo.yaml  gazebo_control_params.yaml  position_pid_servo.yaml  test_wheel.yaml
sample/launch/: position_pid_servo.launch  test_wheel.launch  test_wheel_damping.launch  test_wheel_default.launch
sample/worlds/: ode.world  roki.world
sample/xacro/: position_pid_servo.xacro  test_wheel.xacro  test_wheel_damping.xacro  test_wheel_default.xacro
src/: dc_motor_current_model.cpp  dc_motor_default_model.cpp  dc_motor_duty_model.cpp  dc_motor_hw_interface_sim.cpp  dc_motor_model.cpp  dc_motor_model_switcher.cpp  dc_motor_robot_hw_sim.cpp  dc_motor_voltage_model.cpp  default_robot_hw_sim.cpp  gazebo_dc_motor_hw_interface.cpp  gazebo_dc_motor_plugin.cpp  low_pass_filter.cpp
