<?xml version="1.0"?>
<package format="2">
  <name>gazebo_dc_motor_plugin</name>
  <version>2.5.20</version>
  <description>gazebo_dc_motor_plugin</description>

  <maintainer email="jrivero@osrfoundation.org">Jose Luis Rivero</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/gazebo_dc_motor_plugin</url>
  <url type="bugtracker">https://github.com/ros-simulation/gazebo_ros_pkgs/issues</url>
  <url type="repository">https://github.com/ros-simulation/gazebo_ros_pkgs</url>

  <author>Jonathan Bohren</author>
  <author>Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_dev</build_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>control_toolbox</depend>
  <depend>controller_manager</depend>
  <depend>pluginlib</depend>
  <depend>hardware_interface</depend>
  <depend>transmission_interface</depend>
  <depend>joint_limits_interface</depend>
  <depend>urdf</depend>
  <depend>angles</depend>

  <export>
    <gazebo_dc_motor_plugin plugin="${prefix}/gazebo_dc_motor_hw_interface_plugins.xml"/>
  </export>
</package>
